@@ -6,6 +6,9 @@ import com.bookstore.frontend.model.ShopModel;
 import com.bookstore.frontend.model.dto.Response.CategoryResponseDto;
 import com.bookstore.frontend.service.api.ApiClient;
 import com.bookstore.frontend.util.CartStore;
+import com.bookstore.frontend.util.LoadingUtils;
+import com.bookstore.frontend.util.PaginationSynchronizer;
+import com.bookstore.frontend.util.PaginationUtil;
 import com.bookstore.frontend.utils.AlertUtils;
 import com.fasterxml.jackson.databind.JsonNode;
 import javafx.application.Platform;
@@ -13,10 +16,7 @@ import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Node;
-import javafx.scene.control.CheckBox;
-import javafx.scene.control.ComboBox;
-import javafx.scene.control.Label;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.VBox;
 
@@ -33,6 +33,7 @@ public class ShopController {
     @FXML private ComboBox<String> cbSort;
     @FXML private FlowPane booksContainer;
     @FXML private Label lblStatus;
+    @FXML private Label lblPaginationInfo; // Thêm Label này vào FXML để hiển thị trang
 
     @FXML private TextField txtCategorySearch;
     @FXML private VBox categoriesContainer;
@@ -42,9 +43,13 @@ public class ShopController {
     private ShopModel model;
     private ShopInteractor interactor;
     private List<BookModel> originalBooksList = new ArrayList<>();
+    private List<BookModel> currentFilteredList = new ArrayList<>(); // Lưu danh sách sau khi đã lọc
 
     private List<String> allCategoryNames = new ArrayList<>();
     private final Set<String> activeSelectedCategories = new HashSet<>();
+
+    private int currentPage = 0;
+    private static final int PAGE_SIZE = 10; // Cố định 10 items/trang để load nhanh
 
     private static final String DEFAULT_COVER_URL = "https://res.cloudinary.com/demo/image/upload/v1312461204/sample.jpg";
 
@@ -57,23 +62,29 @@ public class ShopController {
     public void initialize() {
         setupUI();
         setupRealTimeFilters();
+        setupPaginationSync();  // Thêm đồng bộ hóa phân trang
         loadCategoriesFromApi();
         loadInitialData();
-
-        // Bật bộ đàm lắng nghe tín hiệu Real-time SSE từ Backend
         setupRealTimeSync();
+    }
+    
+    /**
+     * Thiết lập đồng bộ hóa phân trang với các page khác
+     */
+    private void setupPaginationSync() {
+        PaginationSynchronizer.getInstance().addListener((pageType, page, pageSize) -> {
+            if ("SHOP".equals(pageType)) {
+                currentPage = page;
+                updatePaginationUI();
+            }
+        });
     }
 
     private void setupUI() {
         if (cbSort != null) {
-            cbSort.setItems(FXCollections.observableArrayList(
-                    "Newest",
-                    "Price: Low to High",
-                    "Price: High to Low"
-            ));
+            cbSort.setItems(FXCollections.observableArrayList("Newest", "Price: Low to High", "Price: High to Low"));
             cbSort.setValue("Newest");
         }
-        // Đã xóa bỏ hoàn toàn các logic liên quan đến btnSearchType
     }
 
     private void loadCategoriesFromApi() {
@@ -81,18 +92,10 @@ public class ShopController {
             if (res.statusCode() == 200) {
                 try {
                     JsonNode root = ApiClient.getInstance().getMapper().readTree(res.body());
-                    List<CategoryResponseDto> dtoList = ApiClient.getInstance().getMapper()
-                            .readerForListOf(CategoryResponseDto.class)
-                            .readValue(root);
-
+                    List<CategoryResponseDto> dtoList = ApiClient.getInstance().getMapper().readerForListOf(CategoryResponseDto.class).readValue(root);
                     allCategoryNames = dtoList.stream().map(CategoryResponseDto::getName).toList();
-
-                    Platform.runLater(() -> {
-                        renderCategoryCheckboxes("");
-                    });
-                } catch (Exception e) {
-                    System.err.println("Lỗi parse JSON Thể loại: " + e.getMessage());
-                }
+                    Platform.runLater(() -> renderCategoryCheckboxes(""));
+                } catch (Exception e) { e.printStackTrace(); }
             }
         });
     }
@@ -100,44 +103,39 @@ public class ShopController {
     private void renderCategoryCheckboxes(String filterText) {
         if (categoriesContainer == null) return;
         categoriesContainer.getChildren().clear();
-
         String lowerFilter = filterText == null ? "" : filterText.toLowerCase();
-
         for (String categoryName : allCategoryNames) {
             if (categoryName.toLowerCase().contains(lowerFilter)) {
                 CheckBox cb = new CheckBox(categoryName);
                 cb.setStyle("-fx-text-fill: #AAAAAA; -fx-padding: 2 0 2 0;");
-
                 cb.setSelected(activeSelectedCategories.contains(categoryName));
-
                 cb.selectedProperty().addListener((obs, old, isSelected) -> {
-                    if (isSelected) {
-                        activeSelectedCategories.add(categoryName);
-                    } else {
-                        activeSelectedCategories.remove(categoryName);
-                    }
+                    if (isSelected) activeSelectedCategories.add(categoryName);
+                    else activeSelectedCategories.remove(categoryName);
                     executeFilter();
                 });
-
                 categoriesContainer.getChildren().add(cb);
             }
         }
     }
 
     private void loadInitialData() {
-        if (lblStatus != null) lblStatus.setText("Loading data...");
-
-        interactor.getBooksPage(0, 50).thenAccept(pageDto -> {
+        System.out.println("[ShopController.loadInitialData] Bắt đầu load dữ liệu...");
+        LoadingUtils.show("Đang tải sách...");
+        
+        interactor.getBooksPage(0, 100).thenAccept(pageDto -> {
+            System.out.println("[ShopController.loadInitialData] Nhận dữ liệu từ Interactor: " + pageDto.getContent().size() + " sách");
             Platform.runLater(() -> {
-                if (pageDto.getContent().isEmpty()) {
-                    if (lblStatus != null) lblStatus.setText("There are no books in stock.");
-                    return;
-                }
-
                 originalBooksList = pageDto.getContent();
-                if (lblStatus != null) lblStatus.setText("");
+                System.out.println("[ShopController.loadInitialData] Thực thi filter...");
                 executeFilter();
+                LoadingUtils.hide();
             });
+        }).exceptionally(ex -> {
+            System.err.println("[ShopController.loadInitialData] Exception: " + ex.getMessage());
+            ex.printStackTrace();
+            LoadingUtils.hide();
+            return null;
         });
     }
 
@@ -146,117 +144,99 @@ public class ShopController {
         txtMinPrice.textProperty().addListener((obs, old, newVal) -> executeFilter());
         txtMaxPrice.textProperty().addListener((obs, old, newVal) -> executeFilter());
         cbSort.valueProperty().addListener((obs, old, newVal) -> executeFilter());
+        if (txtCategorySearch != null) txtCategorySearch.textProperty().addListener((obs, old, newVal) -> renderCategoryCheckboxes(newVal));
+    }
 
-        if (txtCategorySearch != null) {
-            txtCategorySearch.textProperty().addListener((obs, old, newVal) -> {
-                renderCategoryCheckboxes(newVal);
+    private void executeFilter() {
+        currentPage = 0; // Reset về trang đầu khi có lọc
+        String keyword = txtSearch.getText() != null ? txtSearch.getText().trim() : "";
+        final List<String> selectedCategories = new ArrayList<>(activeSelectedCategories);
+
+        if (keyword.isEmpty()) {
+            currentFilteredList = interactor.applyClientSideFilters(
+                    originalBooksList, "", selectedCategories,
+                    parseDoubleSafe(txtMinPrice.getText()), parseDoubleSafe(txtMaxPrice.getText()), cbSort.getValue()
+            );
+            updatePaginationUI();
+        } else {
+            LoadingUtils.show("Đang tìm kiếm...");
+            interactor.searchBooksFromBackend(keyword).thenAccept(booksFromBackend -> {
+                Platform.runLater(() -> {
+                    currentFilteredList = interactor.applyClientSideFilters(
+                            booksFromBackend, "", selectedCategories,
+                            parseDoubleSafe(txtMinPrice.getText()), parseDoubleSafe(txtMaxPrice.getText()), cbSort.getValue()
+                    );
+                    updatePaginationUI();
+                    LoadingUtils.hide();
+                });
+            }).exceptionally(ex -> {
+                LoadingUtils.hide();
+                return null;
             });
         }
     }
 
-    private void executeFilter() {
-        String keyword = txtSearch.getText() != null ? txtSearch.getText().trim() : "";
-        final List<String> selectedCategories = new ArrayList<>(activeSelectedCategories);
-
-        if (lblStatus != null) lblStatus.setText("Searching...");
-
-        if (keyword.isEmpty()) {
-            List<BookModel> finalFilteredBooks = interactor.applyClientSideFilters(
-                    originalBooksList, "", selectedCategories,
-                    parseDoubleSafe(txtMinPrice.getText()), parseDoubleSafe(txtMaxPrice.getText()), cbSort.getValue()
-            );
-            renderBooks(finalFilteredBooks);
-            if (lblStatus != null) lblStatus.setText("Found " + finalFilteredBooks.size() + " books.");
-            return;
+    private void updatePaginationUI() {
+        int totalPages = PaginationUtil.calculateTotalPages(currentFilteredList.size(), PAGE_SIZE);
+        currentPage = PaginationUtil.clampPage(currentPage, totalPages);
+        
+        int from = PaginationUtil.getFromIndex(currentPage, PAGE_SIZE);
+        int to = PaginationUtil.getToIndex(currentPage, PAGE_SIZE, currentFilteredList.size());
+        
+        // Render books cho trang hiện tại
+        if (from < currentFilteredList.size()) {
+            renderBooks(currentFilteredList.subList(from, to));
+        } else {
+            renderBooks(new ArrayList<>());
         }
 
-        interactor.searchBooksFromBackend(keyword).thenAccept(booksFromBackend -> {
-            Platform.runLater(() -> {
-                List<BookModel> finalFilteredBooks = interactor.applyClientSideFilters(
-                        booksFromBackend, "", selectedCategories,
-                        parseDoubleSafe(txtMinPrice.getText()), parseDoubleSafe(txtMaxPrice.getText()), cbSort.getValue()
-                );
+        // Cập nhật label phân trang
+        if (lblPaginationInfo != null) {
+            lblPaginationInfo.setText(PaginationUtil.formatShopPaginationInfo(currentPage, PAGE_SIZE, currentFilteredList.size()));
+        }
+    }
 
-                renderBooks(finalFilteredBooks);
+    @FXML private void handleNextPage() {
+        int totalPages = PaginationUtil.calculateTotalPages(currentFilteredList.size(), PAGE_SIZE);
+        if (PaginationUtil.hasNextPage(currentPage, totalPages)) {
+            currentPage++;
+            updatePaginationUI();
+            PaginationSynchronizer.getInstance().setShopPage(currentPage, PAGE_SIZE);
+        }
+    }
 
-                if (lblStatus != null) {
-                    if (finalFilteredBooks.isEmpty()) {
-                        lblStatus.setText("No books found matching your criteria.");
-                    } else {
-                        lblStatus.setText("Found " + finalFilteredBooks.size() + " books.");
-                    }
-                }
-            });
-        });
+    @FXML private void handlePrevPage() {
+        if (PaginationUtil.hasPreviousPage(currentPage)) {
+            currentPage--;
+            updatePaginationUI();
+            PaginationSynchronizer.getInstance().setShopPage(currentPage, PAGE_SIZE);
+        }
     }
 
     private void renderBooks(List<BookModel> books) {
         booksContainer.getChildren().clear();
-        if (books.isEmpty()) return;
-
         for (BookModel book : books) {
             try {
                 FXMLLoader loader = new FXMLLoader(getClass().getResource("/com/bookstore/frontend/view/components/BookCard.fxml"));
                 Node cardNode = loader.load();
-
-                String formattedPrice = String.format("%,.0f đ", book.getPrice());
-                String imageUrl = (book.getImageUrl() != null && !book.getImageUrl().isBlank())
-                        ? book.getImageUrl()
-                        : DEFAULT_COVER_URL;
-
                 BookCardController cardController = loader.getController();
-
-                cardController.setBookData(book.getTitle(), book.getFormattedAuthors(), formattedPrice, imageUrl);
-
+                cardController.setBookData(book.getTitle(), book.getFormattedAuthors(), String.format("%,.0f đ", book.getPrice()),
+                        (book.getImageUrl() != null && !book.getImageUrl().isBlank()) ? book.getImageUrl() : DEFAULT_COVER_URL);
                 cardController.setCallbacks(
-                        () -> {
-                            if (bookDetailSidePanelController != null) {
-                                bookDetailSidePanelController.setBookDetailDataAndShow(book);
-                            }
-                        },
-                        () -> AlertUtils.promptQuantityForCart(book.getTitle())
-                                .ifPresent(qty -> CartStore.getInstance().addBook(book, qty))
+                        () -> bookDetailSidePanelController.setBookDetailDataAndShow(book),
+                        () -> AlertUtils.promptQuantityForCart(book.getTitle()).ifPresent(qty -> CartStore.getInstance().addBook(book, qty))
                 );
-
                 booksContainer.getChildren().add(cardNode);
-            } catch (Exception e) {
-                System.err.println("Error rendering Shop book card:" + book.getTitle());
-            }
+            } catch (Exception e) { e.printStackTrace(); }
         }
     }
 
     private Double parseDoubleSafe(String text) {
-        if (text == null || text.trim().isEmpty()) return null;
-        try {
-            return Double.parseDouble(text.trim());
-        } catch (NumberFormatException e) {
-            return null;
-        }
+        try { return (text == null || text.isBlank()) ? null : Double.parseDouble(text.trim()); } catch (Exception e) { return null; }
     }
 
     private void setupRealTimeSync() {
-        ApiClient.getInstance().onBookUpdated(updatedBook -> {
-            Platform.runLater(() -> {
-                boolean found = false;
-                for (int i = 0; i < originalBooksList.size(); i++) {
-                    if (originalBooksList.get(i).getId().equals(updatedBook.getId())) {
-                        originalBooksList.set(i, updatedBook);
-                        found = true;
-                        break;
-                    }
-                }
-                if (!found) {
-                    originalBooksList.add(0, updatedBook);
-                }
-                executeFilter();
-            });
-        });
-
-        ApiClient.getInstance().onBookDeleted(bookId -> {
-            Platform.runLater(() -> {
-                originalBooksList.removeIf(b -> b.getId().equals(bookId));
-                executeFilter();
-            });
-        });
+        ApiClient.getInstance().onBookUpdated(updatedBook -> Platform.runLater(this::executeFilter));
+        ApiClient.getInstance().onBookDeleted(bookId -> Platform.runLater(this::executeFilter));
     }
 }
